--- a/development/style.css
+++ b/development/style.css
@@ -8,3 +8,9 @@ body {
     margin: 0 auto;
     width:70%;
 }
+
+.moving-gif {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
