--- a/development/style.css
+++ b/development/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 .center {
     text-align: center;
 }
@@ -5,6 +8,7 @@
     display: none;
 }
 body {
+    font-family: 'Barlow-Condensed';
     margin: 0 auto;
     width:70%;
 }
@@ -13,4 +17,25 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.team-results {
+    border: 2px solid black;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.team-results div {
+    width: 50%;
+}
+
+
+.result-poke {
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 50px;
+}
+
+.pokemon-name {
+    text-transform: capitalize;
 }
