added jolizas css

--- a/development/style.css
+++ b/development/style.css
@@ -1,6 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-
 .center {
     text-align: center;
 }
@@ -8,16 +6,35 @@
     display: none;
 }
 body {
-    font-family: 'Barlow-Condensed';
+    background-image: url("https://media.giphy.com/media/8UGGp7rQvfhe63HrFq/giphy.gif");
+    background-size: 100% 100%;
+    min-height: 100%;
     margin: 0 auto;
     width:70%;
 }
-
+body p{
+    font-family: 'Barlow Condensed';
+    font-weight: 900;
+    font-size: 2em;
+}
+html {
+    height: 100%;
+}
+#quiz-screen {
+    display: none;
+}
+#results {
+    display: none;
+}
 .moving-gif {
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
+
+
+
+/* dont delete below */
 
 .team-results {
     border: 2px solid black;
