--- a/development/style.css
+++ b/development/style.css
@@ -23,9 +23,7 @@ html {
 #quiz-screen {
     display: none;
 }
-#results {
-    display: none;
-}
+
 .moving-gif {
     display: block;
     margin-left: auto;
@@ -42,15 +40,40 @@ html {
     flex-wrap: wrap;
 }
 
+h3 {
+    text-align: center;
+    border: 2px solid black;
+    margin: 0;
+    border-bottom: 0;
+    padding: 10px;
+}
+
+#results {
+    margin-top: 55px;
+    background-color: white;
+    opacity: 90%;
+}
+
+/* #results::before {
+    content:"";
+    opacity: 100%;
+} */
+
 .team-results div {
     width: 50%;
+    padding-left: 180px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
+
 
 
 .result-poke {
     padding: 10px;
-    border: 1px solid black;
-    border-radius: 50px;
+    border: 2px solid black;
+    border-radius: 100px;
+    background-color: orange;
+    opacity: 100%;
 }
 
 .pokemon-name {
