--- a/development/style.css
+++ b/development/style.css
@@ -11,17 +11,52 @@ body {
     min-height: 100%;
     margin: 0 auto;
     width:70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
 body p{
     font-family: 'Barlow Condensed';
     font-weight: 900;
     font-size: 2em;
 }
+
 html {
     height: 100%;
 }
+
+.vertical-center {
+    min-height: 100%;
+    background-color: white;
+    opacity: 90%;
+    border: 5px solid black;
+    padding: 20px;
+}
+
 #quiz-screen {
     display: none;
+    border: 3px solid black;
+    background-color: white;
+    opacity: 95%;
+    border-radius: 30px;
+    padding: 30px;
+}
+
+
+button {
+    padding: 10px;
+    border-radius: 5px;
+    margin: 1rem;
+}
+
+#loading-text {
+    border: 3px solid black;
+    background-color: white;
+    opacity: 95%;
+    border-radius: 20px;
+    padding: 10px;
 }
 
 .moving-gif {
@@ -31,16 +66,17 @@ html {
 }
 
 
-
-/* dont delete below */
-
 .team-results {
     border: 2px solid black;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+    justify-content: center;
+    column-gap: 7rem;
+
 }
 
-h3 {
+.title-team {
     text-align: center;
     border: 2px solid black;
     margin: 0;
@@ -49,24 +85,16 @@ h3 {
 }
 
 #results {
-    margin-top: 55px;
+    width: 70%;
     background-color: white;
     opacity: 90%;
 }
 
-/* #results::before {
-    content:"";
-    opacity: 100%;
-} */
-
 .team-results div {
-    width: 50%;
-    padding-left: 180px;
     padding-top: 20px;
     padding-bottom: 20px;
+    margin: 10px;
 }
-
-
 
 .result-poke {
     padding: 10px;
@@ -78,5 +106,7 @@ h3 {
 
 .pokemon-name {
     text-transform: capitalize;
+    text-align: center;
+    font-weight: 600;
 }
 
